<resources>
    <string name="app_name">Studify</string>
    <string name="Login">Login to existing account</string>
    <string name="Signup">Create a new account</string>
    <string name="app_tagline">Bringing Realistic Students\' Versatility</string>
    <string name="createAccType">I am creating an account as a:</string>
    <string name="createAccDetail">We\'d like to know you better:</string>
    <string name="Proceed">Proceed</string>
    <string name="createAccSubjects">What subjects are you interested in?</string>
    <string name="AdobePs">Adobe Ps</string>
    <string name="Animation">Animation</string>
    <string name="AutoCAD">AutoCAD</string>
    <string name="Programming">Programming</string>
    <string name="MSOffice">MS Office</string>
    <string name="Mathematics">Mathematics</string>
    <string name="Sciences">Sciences</string>
    <string name="Languages">Languages</string>
    <string name="Arts">Arts</string>
    <string name="Engineering">Engineering</string>
    <string name="Law">Law</string>
    <string name="createAccFinalize">One last step and we\'re done</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Enter">Login</string>
    <string name="FullName">Fullname</string>
    <string name="Mentor">Mentor</string>
    <string name="CurrentlyAccepting">Currently Accepting</string>
    <string name="email">Email</string>
    <string name="bio">bioEssay</string>
    <string name="FBNamePrompt">FB Username</string>
    <string name="LinkedInPrompt">LinkedIn Username</string>
    <string name="SubjectsPrompt">Subjects</string>
    <string name="AuthLVLPrompt">Authentication Level</string>
    <string name="Student">Student</string>
    <string name="NoLongerAccepting">No Longer Accepting</string>
    <string name="AuthLVL_0">Email Verification Required</string>
    <string name="AuthLVL_1">Mentorship Application to be Approved</string>
    <string name="AuthLVL_2">Verified</string>
    <string name="logout">Logout</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="relationships">relationships</string>
    <string name="LoginPrompt">Don\'t have an account? <b>Sign up.</b></string>
    <string name="SignupPrompt">Already have an account? <b>Log in.</b></string>
    <string name="Request">Request</string>
    <string name="Mentors">Mentors</string>
    <string name="Requests">Requests</string>
    <string name="back">back</string>
    <string name="defSubjRate">0/hr</string>
    <string name="ConstRates">My rate per hour does not vary.</string>
    <string name="AltRates">I charge depending on the subject.</string>
    <string name="RatePrompt">How do you determine your rate per hour?</string>
    <string name="setConstRate">Set a constant rate per hour</string>
    <string name="SendProposal">Find Users</string>
    <string name="Proposals">Proposals</string>
    <string name="SendMessage">Send</string>
    <string name="SUN">SUN</string>
    <string name="MON">MON</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileImage">Profile Image</string>
    <string name="SchedulePrompt">Schedule</string>
    <string name="Password">Password</string>
    <string name="fbUser_Prompt">Facebook Username (optional)</string>
    <string name="lInUser_Prompt">LinkedIn Username (optional)</string>
    <string name="bioEssay_Prompt">Bio</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="prevMonth">-</string>
    <string name="nextMonth">+</string>
    <string name="defTime">12:59 PM</string>
    <string name="hintElaborate">Elaborate your situation</string>
    <string name="hintStartTime">Start Time</string>
    <string name="hintEndTime">End Time</string>
    <string name="SubjectPrompt">Subject:</string>
    <string name="namePrompt">Name:</string>
    <string name="datePrompt">Date:</string>
    <string name="timePrompt">Time:</string>
    <string name="descPrompt">Description:</string>
    <string name="counterProposal">Offer a Counter Proposal</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="AccCreateNotice">Account Creation Notice</string>
    <string name="dismiss">Dismiss</string>
    <string name="AccCreateNoticeMSG">We, the Studify, give great importance to the privacy and security of our users. Therefore, before we can show your profile to the rest of the Studify community, we require your email to be verified.\n\nAdditionally, as an applying mentor, our team will be personally reviewing your submitted profile in a maximum span of seven (7) business days. During this time, we may conduct an additional interview through your email.\n\nWe sincerely hope for your cooperation. Thank you for your understanding!</string>
    <string name="requestUID">ID:</string>
    <string name="statusPrompt">Status:</string>
    <string name="hintDate">Date</string>
    <string name="paymentProcedure">View Payment Procedure</string>
    <string name="meetLink">Update Google Meet Link</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="paymentProcedureTXT">Here are a few reminders when conducting your payment:\n\n1. Identify the subject in this particular proposal.\n2. Identify the corresponding subject rate in this particular mentor.\n3. Kindly send your payment through our GCash Account Number: 09210712616\n4. Kindly wait a maximum of three (3) business days for our team to confirm your payment.\n\nShould you have problems/concerns, kindly email us through: BSRV_Studify22@gmail.com</string>
    <string name="meetings">Meetings</string>
    <string name="meetLinkPrompt">Meeting Link</string>
    <string name="confirmMeet">Confirm Meeting</string>
    <string name="noMeetLink">Waiting for Mentor to set Meet Link</string>
    <string name="hintMeetLink">Enter Meeting Link</string>
    <string name="setLink">Set Meeting Link</string>
    <string name="confirm">Confirm</string>
    <string name="refund">Refund</string>
    <string name="confirmMeetText">Kindly confirm if your meeting was successful. A deliberation will be done should you require a refund.</string>
    <string name="rateMentor">Congratulations on finishing your class!\nHow was your experience?</string>
    <string name="commentMentor">How was your mentor?</string>
    <string name="CommentsPrompt">Reviews</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="favorite">Favorites</string>
    <string name="history">History</string>
    <string name="Following">Following</string>
    <string name="refundProcedure">We are sorry that you feel the need to require a refund on this class. Let us help you finalize this refund process by following these steps:\n1. Kindly email us at: BSRV_Studify22@gmail.com\n2. Kindly indicate why a refund is required and include a proof\n3. Proofs include a photo showing that your mentor was unable to attend your class.</string>
    <string name="ProductDescPrompt">Product Description</string>
    <string name="PromoVidPrompt">Promotional Video</string>
    <string name="AboutUsPrompt">About Us</string>
    <string name="FAQsPrompt">Frequently Asked Questions</string>
    <string name="WriteFeedback">Write a Feedback</string>
    <string name="WriteFeedbackPrompt">Greetings! Would you mind sharing your thoughts/suggestions about our performance and services?</string>
    <string name="editProfile">Edit Profile</string>
    <string name="searchHint">enter a username or a subject</string>
    <string name="Subject">Subject</string>
    <string name="searchPrompt">Search by:</string>
    <string name="sortPrompt">Sort by:</string>
    <string name="ratingPrompt">Rating</string>
    <string name="feePrompt">Fee</string>
    <string name="orderPrompt">Order by:</string>
    <string name="ratingAscend">↑ Rating</string>
    <string name="ratingDescend">↓ Rating</string>
    <string name="feeAscend">↑ Fee</string>
    <string name="feeDescend">↓ Fee</string>
    <string name="aboutPrompt">About</string>
    <string name="noRatings">No Rating Yet</string>
    <string name="noUsers">No Users Found</string>
    <string name="noProposals">No Proposals Found</string>
    <string name="noSchedules">No Schedules Found</string>
    <string name="ProductDesc">\t\tStudify is an online tutoring application that aims to bring the students\' realtistic versatillity. It provides the opportunity to unlock the power of personalized learning experience to achieve learning objectives faster and easier. The Studify application will allow improvement, competency, and confidence in various learning fields through real conversations with reliable and intelligent tutors from different part of the country. For such, this application will benefit our fellow students and tutors out there with extensive knowledge and commitment to promote success.\n\n<b>START, SCHEDULE, and LEARN - in Studify!</b></string>
    <string name="AboutUs">\t\tStudify is a startup application created to assist students in achieving quality education in just a few clicks. The idea of creating an online tutor application came from a group of students who experienced the pandemic, online classes, and being a pioneer batch of K-12 and new curriculum in college. Due to the several changes that they faced as well as the concerns of their peers, the team decided to propose this solution as means to narrow the knowledge gap. Being the pioneer in several changes, they are fully aware of the struggles of their co-students. Hence, the team is aims to help the students achieve quality education using digital means. Furthermore, the team behind Studify also want to provide an additional source of income to fresh graduates or professionals by means of allowing them to become the tutor.\n\n\t\tWith these, we can assure you that Studify is committed to Bringing Students\' Realistic Versatility.</string>
    <string name="FAQ"><b>1. Where and what modes of communication platform can the student and mentor meet?</b>\n\n\t\t<i>The available modes of communication to be offered will be through the use of Google Meet and Zoom to offer a safer mode of communication</i>\n\n<b>2. How can we easily find our favored mentors for future offers?</b>\n\n\t\t<i>Our user interface offers key features that will alow students to select any mentors as one of their favorites, making it easier to find them in the future, ratings to their performances are also included to allow students to identify the best mentor for their studies</i>\n\n<b>3. What modes of payment systems are available?</b>\n\n\t\t<i>The mode of payment currently available is through Gcash.</i></string>
</resources>