<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount.CreateAcc_Subjects"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/imgBTN_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/roundedbutton_transparent"
        android:contentDescription="@string/logout"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_below="@+id/imgBTN_back"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/createAccSubjects"
            android:textSize="20sp"
            android:fontFamily="@font/mako"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_AdobePs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/AdobePs"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Animation"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_AutoCAD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/AutoCAD"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_Programming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Programming"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Microsoft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Microsoft"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_Mathematics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Mathematics"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Sciences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Sciences"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Arts"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_Languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Languages"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Engineering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Engineering"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_Law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbutton_blue_outline"
                android:text="@string/Law"
                android:textColor="@color/blue"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/roundedbutton_blue_outline"
            android:text="@string/Proceed"
            android:textColor="@color/blue"/>
    </LinearLayout>
</RelativeLayout>