<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp">
    <LinearLayout
        android:id="@+id/layout_mainBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/podkova"
            android:text="@string/datePrompt"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/txtSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/podkova"
            android:text="@string/SubjectPrompt"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/podkova"
            android:text="@string/timePrompt"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/layout_mainBody"
        android:background="#30000000"
        android:contentDescription="@null" />

</RelativeLayout>