<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Signup.Main_Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/linear_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_160sdp"
            android:src="@drawable/ic_bsrv_02"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_tamma"
            android:text="@string/app_name"
            android:textColor="@color/brown"
            android:textSize="@dimen/_45ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mako"
            android:text="@string/app_tagline"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_52sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/roundedbutton_blue"
            android:text="@string/Login" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/roundedbutton_blue_outline"
            android:text="@string/Signup"
            android:textColor="@color/blue"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>