<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateAccount.CreateAcc_Type">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/createAccType"
        android:textSize="20sp"
        android:fontFamily="@font/podkova"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imgBTN_BearMentor"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:background="@drawable/roundedbutton_blue_outline"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bsrv_with_text_05"
            android:contentDescription="@string/Mentor"/>

        <ImageButton
            android:id="@+id/imgBTN_BearStudent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:background="@drawable/roundedbutton_blue_outline"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:scaleType="fitCenter"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_bsrv_with_text_03"
            android:contentDescription="@string/Student"/>
    </LinearLayout>

</LinearLayout>