<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Homepage.User_Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="250dp"
                app:cardElevation="2dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/img_UserPic"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:padding="20dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_bsrv_05" />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_fullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/baloo_tamma"
                    android:text="@string/FullName"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/podkova"
                    android:text="@string/email"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_AccType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/mako"
                    android:text="@string/Mentor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/mako"
                    android:text="@string/CurrentlyAccepting"
                    android:textColor="@color/green"
                    android:textSize="16sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_bioEssay"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="20dp">
                <TextView
                    android:id="@+id/txt_AuthLVLPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AuthLVLPrompt"
                    android:fontFamily="@font/podkova"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txt_AuthLVL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/AuthLVLPrompt"
                    android:fontFamily="@font/mako"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:id="@+id/txt_FBUserPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/FBNamePrompt"
                    android:fontFamily="@font/podkova"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txt_FBUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/FBNamePrompt"
                    android:fontFamily="@font/mako"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:id="@+id/txt_LInPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/LinkedInPrompt"
                    android:fontFamily="@font/podkova"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txt_LInUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/LinkedInPrompt"
                    android:fontFamily="@font/mako"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>

                <TextView
                    android:id="@+id/txt_SubjectsPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/SubjectsPrompt"
                    android:fontFamily="@font/podkova"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txt_SubjectsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/SubjectsPrompt"
                    android:fontFamily="@font/mako"
                    android:textSize="18sp"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>